pom: upgrade to java 21