@@ -21,9 +21,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.version>3.11.0</maven.compiler.version>
-        <maven.compiler.release>20</maven.compiler.release>
-        <kotlin.compiler.jvmTarget>19</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.9.0</kotlin.version>
+        <maven.compiler.release>21</maven.compiler.release>
+        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
+        <kotlin.version>1.9.20</kotlin.version>
         <flyway.version>9.21.1</flyway.version>
         <jooq.version>3.18.5</jooq.version>
         <hikari.version>5.0.1</hikari.version>
@@ -36,7 +36,7 @@
         <mockito.version>5.4.0</mockito.version>
 
         <jib.version>3.3.2</jib.version>
-        <jib.base.image>eclipse-temurin:20-jre-alpine</jib.base.image>
+        <jib.base.image>eclipse-temurin:21-jre-alpine</jib.base.image>
     </properties>
 
     <repositories>
@@ -117,9 +117,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
-                <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
